# fatigue

./: Cargo.toml
src/: lib.rs
src/tests/: mod.rs
