[package]
name = "fatigue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
chrono = "0.4"

[dev-dependencies]